# ancestry_mirror

./: Makefile.in  README.md  configure  configure.ac
src/: Ancestry_params.cpp  Ancestry_params.h  Data23.cpp  Data23.h  DataVCF.cpp  DataVCF.h  FreqData.cpp  FreqData.h  Makefile.am  Makefile.in  VCF_params.cpp  VCF_params.h  ancestry.cpp  relfinder.cpp  relfinder_vcf.cpp  summarize_bootstrap.py
